Fixes #803: CSS rule added to wrapped percentage field

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -871,6 +871,12 @@ a.menu-item:hover{
     pointer-events: none;
 }
 
+.input-group.percentage-input-group {
+    .form-control {
+        width: 100% !important;
+    }
+}
+
 //Horizontal scroll
 .bottomscroll-div,.topscroll-div {
     display: table;
